--- a/imports/iframe.html
+++ b/imports/iframe.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<!-- Stylesheet -->
-		<link type="text/css" rel="stylesheet" href="http://usergoodness.org/css/styles.css"></link>
+		<link type="text/css" rel="stylesheet" href="../css/styles.css"></link>
 	</head>
 	<body>
 		<div id="iframeform">
@@ -31,5 +31,3 @@
 		</div>
 	</body>
 </html>
-
-<in
