--- a/imports/footer.html
+++ b/imports/footer.html
@@ -1,7 +1,7 @@
 <div class="section-wrapper2">
 	<h2>Have Any Questions?</h2>
 	<div class="footer-left">
-		<iframe id="contact_frame" src="http://timbroadwater.com/websites/ugform/" height="380" width="100%" frameborder="0" marginheight="0" marginwidth="0" scrolling="no">Loading...</iframe> 
+		<iframe id="contact_frame" src="../imports/iframe.html" height="380" width="100%" frameborder="0" marginheight="0" marginwidth="0" scrolling="no">Loading...</iframe> 
 	</div>
 	<div class="footer-right">
 		<a href="https://www.facebook.com/usergoodness/"><icon class="fa fa-facebook-square"></icon></a>
