--- a/imports/header.html
+++ b/imports/header.html
@@ -3,9 +3,9 @@
   	<input class="menu-btn" type="checkbox" id="menu-btn" />
   	<label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
   	<ul class="menu">
-  		<li><a href="../">Home</a></li>
-		<li><a href="/about">About</a></li>
-		<li><a href="/services">Services</a></li>
-		<li><a href="/process">Our Process</a></li>
+  		<li><a class="nav-home" href="../">Home</a></li>
+		<li><a class="nav-about" href="/about">About</a></li>
+		<li><a class="nav-services" href="/services">Services</a></li>
+		<li><a class="nav-process" href="/process">Our Process</a></li>
 	</ul>
 </div>	
