--- a/imports/footer.html
+++ b/imports/footer.html
@@ -1,5 +1,5 @@
 <div class="section-wrapper2">
-	<h2>Have Any Questions?</h2>
+	<h2>Give us a buzz to see how we can help!</h2>
 	<div class="footer-left">
 		<iframe id="contact_frame" src="../imports/iframe.html" height="380" width="100%" frameborder="0" marginheight="0" marginwidth="0" scrolling="no">Loading...</iframe> 
 	</div>
