--- a/imports/mservice.html
+++ b/imports/mservice.html
@@ -7,6 +7,8 @@
 			<h3>Audits</h3>
 			<p>Learn more about your product or service with an expert review.</p>
 		</div>
+		<icon class="fa fa-angle-down"></icon>
+		
 	</div>
 	<div class="audit-textm destroy">
 		<h4>Analytics Audit</h4>
@@ -27,7 +29,9 @@
 		<div class="text-wrap">
 			<h3>Customer Research</h3>
 			<p>Discover what your customers really think about your product or service.</p>
-		</div>
+</div>
+			<icon class="fa fa-angle-down"></icon>
+
 	</div>
 	<div class="customer-textm destroy">
 		<h4>Content Analysis</h4>
@@ -57,6 +61,8 @@
 			<h3>Quantitative Research</h3>
 			<p>Find out how data can help you understand your customers.</p>
 		</div>
+		<icon class="fa fa-angle-down"></icon>
+		
 	</div>
 	<div class="quant-textm destroy">
 		<h4>Analytics Installation </h4>
@@ -74,7 +80,7 @@
 		<h4>Top Task Testing</h4>
 		<p>When your product or service involves a large amount of tasks, utilize top task testing to understand the perceived importance of each task based on your customers’ feedback. </p>
 	</div>
-	<div class="uidesignm accbutton">
+	<div class="uidesignm accbutton whiteborder">
 		<div class="img-wrap">
 			<img alt="bullet point" src="../img/service-06.svg">
 		</div>
@@ -82,6 +88,8 @@
 			<h3>User Interface Design</h3>
 			<p>Build delightful experiences for your customers.</p>
 		</div>
+		<icon class="fa fa-angle-down"></icon>
+		
 	</div>
 	<div class="uidesign-textm destroy">
 		<h4>Interaction Design</h4>
