--- a/imports/footer.html
+++ b/imports/footer.html
@@ -10,6 +10,6 @@
 		<p>2017 User Goodness. All Rights Reserved.<br>
 			<a href="tel:14123878594">1-412-387-8594</a> 
 			503(c) Board Member Info<br>
-		Terms & Conditions? / Privacy Policy?</p>
+		<a href="../agreements">Privacy Policy & Terms of Use</a></p>
 	</div>				
 </div>
