--- a/imports/footer.html
+++ b/imports/footer.html
@@ -5,9 +5,8 @@
 	</div>
 	<div class="footer-right">
 		<a href="https://twitter.com/usergoodness"><icon class="fa fa-twitter-square"></icon></a>
-		<p>2017 User Goodness. All Rights Reserved.<br>
-			<a href="tel:14123878594">1-412-387-8594</a> 
-			503(c) Board Member Info<br>
+		<p>©2018 User Goodness. All Rights Reserved.<br>
+			<a href="tel:14123878594">1-412-387-8594</a><br>
 		<a href="../agreements">Privacy Policy & Terms of Use</a></p>
 	</div>				
 </div>
