UAT/Review Edits for Website #81

--- a/imports/footer.html
+++ b/imports/footer.html
@@ -1,11 +1,11 @@
 <div class="section-wrapper2">
-	<h2>Give us a buzz to see how we can help!</h2>
+	<h2><i class="far fa-envelope"></i> Give us a buzz to see how we can help!</h2>
 	<div class="footer-left">
 		<iframe id="contact_frame" src="../imports/iframe.html" height="380" width="100%" frameborder="0" marginheight="0" marginwidth="0" scrolling="no">Loading...</iframe> 
 	</div>
 	<div class="footer-right">
-		<a href="https://twitter.com/usergoodness"><icon class="fa fa-twitter-square"></icon></a>
-		<p>©2018 User Goodness. All Rights Reserved.<br>
+		<h3><a class="twitbut" href="https://twitter.com/usergoodness"><icon class="fa fa-twitter"></icon> Tweet UserGoodness</a></h3>
+		<p>©2018 UserGoodness. All Rights Reserved.<br>
 			<a href="tel:14123878594">1-412-387-8594</a><br>
 		<a href="../agreements">Privacy Policy & Terms of Use</a></p>
 	</div>				
