--- a/imports/head.html
+++ b/imports/head.html
@@ -10,7 +10,7 @@
 	</script>
 
 	<!-- Webpage Title -->
-	<title>User Goodness</title> 
+	<title>UserGoodness</title> 
 
 	<!-- Meta Information -->
     <meta charset="utf-8">
@@ -22,9 +22,9 @@
     <meta http-equiv="cleartype" content="on">
 
 	<!-- Author, Description, and Keywords --> 
-	<meta name="author" content="User Goodness Team">
-	<meta name="description" content="User Goodness is a UX research and design consultancy that helps nonprofits and businesses by creating solutions focused on improving customer experience."> <!-- Limit to 160 Characters -->
-	<meta name="keywords" content="User goodness, usergoodness, UX for nonprofits, nonprofit user experience, nonprofit ux, ux design non profit, ux volunteer, volunteer ux, Agency, ux, User Experience Designer, Ux Design, UX Website, Charities Non, Charitable Organizations, Registered Non, Charity Organization, Nonprofit, Nonprofit Organization, Non Profit, Design Company, Visual Designer, Consulting, Website Usability, Usability Testing">
+	<meta name="author" content="UserGoodness Team">
+	<meta name="description" content="UserGoodness is a UX research and design consultancy that helps nonprofits and businesses by creating solutions focused on improving customer experience."> <!-- Limit to 160 Characters -->
+	<meta name="keywords" content="UserGoodness, user goodness, UX for nonprofits, nonprofit user experience, nonprofit ux, ux design non profit, ux volunteer, volunteer ux, Agency, ux, User Experience Designer, Ux Design, UX Website, Charities Non, Charitable Organizations, Registered Non, Charity Organization, Nonprofit, Nonprofit Organization, Non Profit, Design Company, Visual Designer, Consulting, Website Usability, Usability Testing">
 
 	<!-- Favicons -->
 	<link rel="apple-touch-icon-precomposed" sizes="57x57" href="../favicon/apple-touch-icon-57x57.png" />
@@ -51,6 +51,9 @@
 	<!-- CSS -->
 	<link type="text/css" rel="stylesheet" href="../css/styles.css"></link>
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed|Roboto+Mono|Roboto+Slab" rel="stylesheet">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
+
+
 
 	<!-- JavaScripts -->
 	<script src="https://use.fontawesome.com/d5e42abe4b.js"></script>
