--- a/imports/header.html
+++ b/imports/header.html
@@ -1,7 +1,8 @@
 <div class="header-wrapper">
 	<h1><a class="logo" href="/"><img src="../img/usergoodnesslogo.svg" alt="UserGoodness"></a></h1>
   	<input class="menu-btn" type="checkbox" id="menu-btn" />
-  	<label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+  	<label class="menu-icon" for="menu-btn"><span class="navicon"></span> Menu
+  	</label>
   	<ul class="menu">
   		<li><a class="nav-home" href="../">Home</a></li>
 		<li><a class="nav-about" href="/about">About</a></li>
