--- a/imports/header.html
+++ b/imports/header.html
@@ -8,6 +8,6 @@
 		<li><a class="nav-about" href="/about">About</a></li>
 		<li><a class="nav-services" href="/services">Services</a></li>
 		<li><a class="nav-process" href="/process">Our Process</a></li>
-		<li><a class="nav-process" href="http://blog.usergoodness.com">Blog</a></li>
+		<li><a class="nav-process" href="https://medium.com/usergoodness">Blog</a></li>
 	</ul>
 </div>	
